final edits to all_movies template

--- a/templates/all_movies.html
+++ b/templates/all_movies.html
@@ -9,4 +9,4 @@ There are no saved movies to show.
 {% endif %}
 
 
-<a href="{{url_for('homepage')}}">Return to home page</a>
+<a href="{{url_for('home')}}">Return to home page</a>
